2007-10-06  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/conditional.c:
	some reformatting

2007-10-05  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/ConfigFvwmDefaults:
	restore default action of closing menus for menu titles

2007-10-02  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* libs/FScreen.c (FindScreenOfXY):
	* fvwm/move_resize.c (GetMoveArguments):
	fixed the "screen w" argument of the Move and other commands

2007-09-11  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/virtual.c (HandlePaging):
	dont't modify *xl and *yt unless we we really page

2007-09-04  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm/module_list.h:
	* fvwm/module_list.c:
	a little cleanup

2007-09-01  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* NEWS:
	* configure.ac:
	increased version to 2.5.24

	* NEWS:
	* configure.ac:
	updated for 2.5.23 release

	* libs/Flocale.c (FlocaleEncodeString):
	removed previous warning fix

2007-08-30 Thomas Adam <thomas@edulinux.homeunix.org>

	* fvwm/style.c:
	* fvwm/add_window.c:
	Added new style option:  StartShaded.

2007-08-30  Renato Caldas  <seventhguardian@gmail.com>

	* libs/Flocale.c (FlocaleEncodeString):
	fix compile warning

2007-08-30  Viktor Griph  <griph(at)student(dot)chalmers(dot)se>

	* configure.ac:
	* fvwm/fvwm.1.in
	* fvwm/Makefile.am:
	removed old fvwm manpage

2007-08-29  Renato Caldas  <seventhguardian@gmail.com>

	* NEWS:
	* configure.ac:
	increased version to 2.5.23

	* NEWS:
	* configure.ac:
	fix the date for 2.5.22 release

2007-08-28  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm/windowlist.c (CMD_WindowList):
	fixed crash when using CurrentAtEnd and IconifiedAtEnd with only
	iconified windows.

2007-08-28  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* configure.ac:
	fixed perl check
	use "test ! ... = ..." instead of "test ... != ..."

	* fvwm/builtins.c (CMD_PropertyChange):
	fixed completely broken parsing of PropertyChange arguments
